fix alignment

--- a/webapp/src/components/contentBlock.scss
+++ b/webapp/src/components/contentBlock.scss
@@ -22,15 +22,11 @@
     .ImageElement {
         pointer-events: none;
     }
-    .octo-block {
-        width: 85%;
-    }
 }
 
 .rowContents {
     display: flex;
     width: 100%;
-    margin-right: 10px;
 }
 
 .addToRow {
