--- a/webapp/src/components/dialog.scss
+++ b/webapp/src/components/dialog.scss
@@ -76,5 +76,8 @@
                 padding: 10px 10px;
             }
         }
+        > .content.fullwidth {
+            padding-left: 78px;
+        }
     }
 }
