--- a/webapp/src/styles/main.scss
+++ b/webapp/src/styles/main.scss
@@ -203,7 +203,6 @@ h1 {
 
 .octo-content {
     width: 100%;
-    margin-right: 50px;
 }
 
 .octo-block {
@@ -230,6 +229,8 @@ h1 {
     flex-direction: row;
     align-items: flex-start;
     justify-content: flex-end;
-    padding-top: 10px;
-    padding-right: 10px;
+
+    @media not screen and (max-width: 975px) {
+        width: 48px;
+    }
 }
